version/dev/_sources/api/ansys/mechanical/stubs/v241/Ansys/ACT/Automation/Mechanical/BoundaryConditions/Pressure.rst.txt
.. vale off



:class:`Pressure`
=================

.. py:class:: ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.Pressure

   Bases: :py:obj:`object`


   
   Defines a Pressure.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: Pressure

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Activate`
            - Activate the current object.
          * - :py:attr:`~AddComment`
            - Creates a new child Comment.
          * - :py:attr:`~AddFigure`
            - Creates a new child Figure.
          * - :py:attr:`~AddImage`
            - Creates a new child Image.
          * - :py:attr:`~CopyTo`
            - Copies all visible properties from this object to another.
          * - :py:attr:`~CreateParameter`
            - Creates a new parameter for a Property.
          * - :py:attr:`~Delete`
            - Run the Delete action.
          * - :py:attr:`~Duplicate`
            - Creates a copy of the current DataModelObject.
          * - :py:attr:`~GetActivateAtLoadStep`
            - GetActivateAtLoadStep method.
          * - :py:attr:`~GetChildren`
            - Gets the list of children, filtered by type.
          * - :py:attr:`~GetComponentActivateAtLoadStep`
            - GetComponentActivateAtLoadStep method.
          * - :py:attr:`~GetParameter`
            - Gets the parameter corresponding to the given property.
          * - :py:attr:`~GroupAllSimilarChildren`
            - Run the GroupAllSimilarChildren action.
          * - :py:attr:`~GroupSimilarObjects`
            - Run the GroupSimilarObjects action.
          * - :py:attr:`~PromoteToNamedSelection`
            - Run the PromoteToNamedSelection action.
          * - :py:attr:`~PropertyByAPIName`
            - Get a property by its API name.
          * - :py:attr:`~PropertyByName`
            - Get a property by its unique name.
          * - :py:attr:`~RemoveParameter`
            - Removes the parameter from the parameter set corresponding to the given property.
          * - :py:attr:`~SetActivateAtLoadStep`
            - SetActivateAtLoadStep method.
          * - :py:attr:`~SetComponentActivateAtLoadStep`
            - SetComponentActivateAtLoadStep method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~AppliedBy`
            - Gets or sets the AppliedBy.
          * - :py:attr:`~Children`
            - Gets the list of children.
          * - :py:attr:`~Comments`
            - Gets the list of associated comments.
          * - :py:attr:`~CoordinateSystem`
            - Gets or sets the CoordinateSystem.
          * - :py:attr:`~DataModelObjectCategory`
            - Gets the current DataModelObject's category.
          * - :py:attr:`~DefineBy`
            - Gets or sets the DefineBy.
          * - :py:attr:`~Direction`
            - Gets or sets the Direction.
          * - :py:attr:`~DynamicRelaxationBehavior`
            - Gets or sets the DynamicRelaxationBehavior.
          * - :py:attr:`~Figures`
            - Gets the list of associated figures.
          * - :py:attr:`~GraphControlsXAxis`
            - Gets or sets the GraphControlsXAxis.
          * - :py:attr:`~HarmonicIndex`
            - Gets or sets the HarmonicIndex.
          * - :py:attr:`~Images`
            - Gets the list of associated images.
          * - :py:attr:`~IndependentVariable`
            - Gets or sets the IndependentVariable.
          * - :py:attr:`~InternalObject`
            - Gets the internal object. For advanced usage only.
          * - :py:attr:`~LoadVectorAssignment`
            - Gets or sets the LoadVectorAssignment.
          * - :py:attr:`~LoadVectorNumber`
            - Gets or sets the LoadVectorNumber.
          * - :py:attr:`~LoadedArea`
            - Gets or sets the LoadedArea.
          * - :py:attr:`~Location`
            - Gets or sets the Location.
          * - :py:attr:`~Magnitude`
            - Gets the Magnitude.
          * - :py:attr:`~MagnitudeImag`
            - Gets the MagnitudeImag.
          * - :py:attr:`~NonCyclicLoadingType`
            - Gets or sets the NonCyclicLoadingType.
          * - :py:attr:`~NumberOfSegments`
            - Gets or sets the NumberOfSegments.
          * - :py:attr:`~PhaseAngle`
            - Gets the PhaseAngle.
          * - :py:attr:`~Properties`
            - Gets the list of properties for this object.
          * - :py:attr:`~RangeMaximum`
            - Gets or sets the RangeMaximum.
          * - :py:attr:`~RangeMinimum`
            - Gets or sets the RangeMinimum.
          * - :py:attr:`~ReadOnly`
            - Gets or sets the ReadOnly.
          * - :py:attr:`~SectorNumber`
            - Gets or sets the SectorNumber.
          * - :py:attr:`~SharedRefBody`
            - Gets or sets the SharedRefBody.
          * - :py:attr:`~Suppressed`
            - Gets or sets the Suppressed.
          * - :py:attr:`~TableAssignment`
            - Gets or sets the TableAssignment.
          * - :py:attr:`~VisibleProperties`
            - Gets the list of properties that are visible for this object.
          * - :py:attr:`~XComponent`
            - Gets the XComponent.
          * - :py:attr:`~XComponentImag`
            - Gets the XComponentImag.
          * - :py:attr:`~XPhaseAngle`
            - Gets the XPhaseAngle.
          * - :py:attr:`~XYZFunctionCoordinateSystem`
            - Gets or sets the XYZFunctionCoordinateSystem.
          * - :py:attr:`~YComponent`
            - Gets the YComponent.
          * - :py:attr:`~YComponentImag`
            - Gets the YComponentImag.
          * - :py:attr:`~YPhaseAngle`
            - Gets the YPhaseAngle.
          * - :py:attr:`~ZComponent`
            - Gets the ZComponent.
          * - :py:attr:`~ZComponentImag`
            - Gets the ZComponentImag.
          * - :py:attr:`~ZPhaseAngle`
            - Gets the ZPhaseAngle.







Property detail
---------------
.. py:property:: AppliedBy
   :type: Optional[Ansys.Mechanical.DataModel.Enums.LoadAppliedBy]

   
   Gets or sets the AppliedBy.
















   ..
       !! processed by numpydoc !!

.. py:property:: Children
   :type: Optional[System.Collections.Generic.IList[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]]

   
   Gets the list of children.
















   ..
       !! processed by numpydoc !!

.. py:property:: Comments
   :type: Optional[System.Collections.Generic.IEnumerable[Ansys.ACT.Automation.Mechanical.Comment]]

   
   Gets the list of associated comments.
















   ..
       !! processed by numpydoc !!

.. py:property:: CoordinateSystem
   :type: Optional[Ansys.ACT.Automation.Mechanical.CoordinateSystem]

   
   Gets or sets the CoordinateSystem.
















   ..
       !! processed by numpydoc !!

.. py:property:: DataModelObjectCategory
   :type: Optional[Ansys.Mechanical.DataModel.Enums.DataModelObjectCategory]

   
   Gets the current DataModelObject's category.
















   ..
       !! processed by numpydoc !!

.. py:property:: DefineBy
   :type: Optional[Ansys.Mechanical.DataModel.Enums.LoadDefineBy]

   
   Gets or sets the DefineBy.
















   ..
       !! processed by numpydoc !!

.. py:property:: Direction
   :type: Optional[Ansys.ACT.Math.Vector3D]

   
   Gets or sets the Direction.
















   ..
       !! processed by numpydoc !!

.. py:property:: DynamicRelaxationBehavior
   :type: Optional[Ansys.Mechanical.DataModel.Enums.DynamicRelaxationBehaviorType]

   
   Gets or sets the DynamicRelaxationBehavior.
















   ..
       !! processed by numpydoc !!

.. py:property:: Figures
   :type: Optional[System.Collections.Generic.IEnumerable[Ansys.ACT.Automation.Mechanical.Figure]]

   
   Gets the list of associated figures.
















   ..
       !! processed by numpydoc !!

.. py:property:: GraphControlsXAxis
   :type: Optional[Ansys.Mechanical.DataModel.Enums.LoadVariableVariationType]

   
   Gets or sets the GraphControlsXAxis.
















   ..
       !! processed by numpydoc !!

.. py:property:: HarmonicIndex
   :type: Optional[Ansys.ACT.Mechanical.Fields.Field]

   
   Gets or sets the HarmonicIndex.
















   ..
       !! processed by numpydoc !!

.. py:property:: Images
   :type: Optional[System.Collections.Generic.IEnumerable[Ansys.ACT.Automation.Mechanical.Image]]

   
   Gets the list of associated images.
















   ..
       !! processed by numpydoc !!

.. py:property:: IndependentVariable
   :type: Optional[Ansys.Mechanical.DataModel.Enums.LoadVariableVariationType]

   
   Gets or sets the IndependentVariable.
















   ..
       !! processed by numpydoc !!

.. py:property:: InternalObject
   :type: Optional[Ansys.Common.Interop.DSObjectsAuto.IDSLoadAuto]

   
   Gets the internal object. For advanced usage only.
















   ..
       !! processed by numpydoc !!

.. py:property:: LoadVectorAssignment
   :type: Optional[Ansys.Mechanical.DataModel.Enums.LoadVectorAssignment]

   
   Gets or sets the LoadVectorAssignment.
















   ..
       !! processed by numpydoc !!

.. py:property:: LoadVectorNumber
   :type: Optional[System.Int32]

   
   Gets or sets the LoadVectorNumber.
















   ..
       !! processed by numpydoc !!

.. py:property:: LoadedArea
   :type: Optional[Ansys.Mechanical.DataModel.Enums.LoadedArea]

   
   Gets or sets the LoadedArea.
















   ..
       !! processed by numpydoc !!

.. py:property:: Location
   :type: Optional[Ansys.ACT.Interfaces.Common.ISelectionInfo]

   
   Gets or sets the Location.
















   ..
       !! processed by numpydoc !!

.. py:property:: Magnitude
   :type: Optional[Ansys.ACT.Mechanical.Fields.Field]

   
   Gets the Magnitude.
















   ..
       !! processed by numpydoc !!

.. py:property:: MagnitudeImag
   :type: Optional[Ansys.ACT.Mechanical.Fields.Field]

   
   Gets the MagnitudeImag.
















   ..
       !! processed by numpydoc !!

.. py:property:: NonCyclicLoadingType
   :type: Optional[Ansys.Mechanical.DataModel.Enums.NonCyclicLoadingType]

   
   Gets or sets the NonCyclicLoadingType.
















   ..
       !! processed by numpydoc !!

.. py:property:: NumberOfSegments
   :type: Optional[System.Int32]

   
   Gets or sets the NumberOfSegments.
















   ..
       !! processed by numpydoc !!

.. py:property:: PhaseAngle
   :type: Optional[Ansys.ACT.Mechanical.Fields.Field]

   
   Gets the PhaseAngle.
















   ..
       !! processed by numpydoc !!

.. py:property:: Properties
   :type: Optional[System.Collections.Generic.IReadOnlyList[Ansys.ACT.Automation.Mechanical.Property]]

   
   Gets the list of properties for this object.
















   ..
       !! processed by numpydoc !!

.. py:property:: RangeMaximum
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets or sets the RangeMaximum.
















   ..
       !! processed by numpydoc !!

.. py:property:: RangeMinimum
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets or sets the RangeMinimum.
















   ..
       !! processed by numpydoc !!

.. py:property:: ReadOnly
   :type: Optional[System.Boolean]

   
   Gets or sets the ReadOnly.
















   ..
       !! processed by numpydoc !!

.. py:property:: SectorNumber
   :type: Optional[Ansys.ACT.Mechanical.Fields.Field]

   
   Gets or sets the SectorNumber.
















   ..
       !! processed by numpydoc !!

.. py:property:: SharedRefBody
   :type: Optional[Ansys.ACT.Automation.Mechanical.Body]

   
   Gets or sets the SharedRefBody.
















   ..
       !! processed by numpydoc !!

.. py:property:: Suppressed
   :type: Optional[System.Boolean]

   
   Gets or sets the Suppressed.
















   ..
       !! processed by numpydoc !!

.. py:property:: TableAssignment
   :type: Optional[Ansys.ACT.Automation.Mechanical.Table]

   
   Gets or sets the TableAssignment.
















   ..
       !! processed by numpydoc !!

.. py:property:: VisibleProperties
   :type: Optional[System.Collections.Generic.IReadOnlyList[Ansys.ACT.Automation.Mechanical.Property]]

   
   Gets the list of properties that are visible for this object.
















   ..
       !! processed by numpydoc !!

.. py:property:: XComponent
   :type: Optional[Ansys.ACT.Mechanical.Fields.Field]

   
   Gets the XComponent.
















   ..
       !! processed by numpydoc !!

.. py:property:: XComponentImag
   :type: Optional[Ansys.ACT.Mechanical.Fields.Field]

   
   Gets the XComponentImag.
















   ..
       !! processed by numpydoc !!

.. py:property:: XPhaseAngle
   :type: Optional[Ansys.ACT.Mechanical.Fields.Field]

   
   Gets the XPhaseAngle.
















   ..
       !! processed by numpydoc !!

.. py:property:: XYZFunctionCoordinateSystem
   :type: Optional[Ansys.ACT.Automation.Mechanical.CoordinateSystem]

   
   Gets or sets the XYZFunctionCoordinateSystem.
















   ..
       !! processed by numpydoc !!

.. py:property:: YComponent
   :type: Optional[Ansys.ACT.Mechanical.Fields.Field]

   
   Gets the YComponent.
















   ..
       !! processed by numpydoc !!

.. py:property:: YComponentImag
   :type: Optional[Ansys.ACT.Mechanical.Fields.Field]

   
   Gets the YComponentImag.
















   ..
       !! processed by numpydoc !!

.. py:property:: YPhaseAngle
   :type: Optional[Ansys.ACT.Mechanical.Fields.Field]

   
   Gets the YPhaseAngle.
















   ..
       !! processed by numpydoc !!

.. py:property:: ZComponent
   :type: Optional[Ansys.ACT.Mechanical.Fields.Field]

   
   Gets the ZComponent.
















   ..
       !! processed by numpydoc !!

.. py:property:: ZComponentImag
   :type: Optional[Ansys.ACT.Mechanical.Fields.Field]

   
   Gets the ZComponentImag.
















   ..
       !! processed by numpydoc !!

.. py:property:: ZPhaseAngle
   :type: Optional[Ansys.ACT.Mechanical.Fields.Field]

   
   Gets the ZPhaseAngle.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Activate() -> System.Void

   
   Activate the current object.

   ..
       !! processed by numpydoc !!

.. py:method:: AddComment() -> Ansys.ACT.Automation.Mechanical.Comment

   
   Creates a new child Comment.

   ..
       !! processed by numpydoc !!

.. py:method:: AddFigure() -> Ansys.ACT.Automation.Mechanical.Figure

   
   Creates a new child Figure.

   ..
       !! processed by numpydoc !!

.. py:method:: AddImage(filePath: System.String) -> Ansys.ACT.Automation.Mechanical.Image

.. code-block:: text

   Creates a new child Image.
   If a filePath is provided, the image will be loaded from that file,
   if not, the image will be a screen capture of the Geometry window.

..
       !! processed by numpydoc !!

.. py:method:: CopyTo(other: Ansys.ACT.Automation.Mechanical.DataModelObject) -> System.Void

   
   Copies all visible properties from this object to another.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateParameter(propName: System.String) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Creates a new parameter for a Property.

   ..
       !! processed by numpydoc !!

.. py:method:: Delete() -> System.Void

   
   Run the Delete action.

   ..
       !! processed by numpydoc !!

.. py:method:: Duplicate() -> Ansys.Mechanical.DataModel.Interfaces.IDataModelObject

   
   Creates a copy of the current DataModelObject.

   ..
       !! processed by numpydoc !!

.. py:method:: GetActivateAtLoadStep(stepNumber: System.UInt32) -> System.Boolean

   
   GetActivateAtLoadStep method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetChildren(recurses: System.Boolean, children: System.Collections.Generic.IList[ChildrenType]) -> System.Collections.Generic.IList[ChildrenType]

   
   Gets the list of children, filtered by type.

   ..
       !! processed by numpydoc !!

.. py:method:: GetComponentActivateAtLoadStep(component: System.String, stepNumber: System.UInt32) -> System.Boolean

   
   GetComponentActivateAtLoadStep method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetParameter(propName: System.String) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Gets the parameter corresponding to the given property.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupAllSimilarChildren() -> System.Void

   
   Run the GroupAllSimilarChildren action.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupSimilarObjects() -> Ansys.ACT.Automation.Mechanical.TreeGroupingFolder

   
   Run the GroupSimilarObjects action.

   ..
       !! processed by numpydoc !!

.. py:method:: PromoteToNamedSelection() -> System.Collections.Generic.IEnumerable[Ansys.ACT.Automation.Mechanical.NamedSelection]

   
   Run the PromoteToNamedSelection action.

   ..
       !! processed by numpydoc !!

.. py:method:: PropertyByAPIName(name: System.String) -> Ansys.ACT.Automation.Mechanical.Property

.. code-block:: text

   Get a property by its API name.
   If multiple properties have the same API Name, only the first property with that name will be returned.

..
       !! processed by numpydoc !!

.. py:method:: PropertyByName(name: System.String) -> Ansys.ACT.Automation.Mechanical.Property

   
   Get a property by its unique name.

   ..
       !! processed by numpydoc !!

.. py:method:: RemoveParameter(propName: System.String) -> System.Void

   
   Removes the parameter from the parameter set corresponding to the given property.

   ..
       !! processed by numpydoc !!

.. py:method:: SetActivateAtLoadStep(stepNumber: System.UInt32, bActive: System.Boolean) -> System.Void

   
   SetActivateAtLoadStep method.

   ..
       !! processed by numpydoc !!

.. py:method:: SetComponentActivateAtLoadStep(component: System.String, stepNumber: System.UInt32, bActive: System.Boolean) -> System.Void

   
   SetComponentActivateAtLoadStep method.

   ..
       !! processed by numpydoc !!



.. vale on